bindings/rust/include/zlink/eventing/api.h

/* SPDX-License-Identifier: MPL-2.0 */

#ifndef ZLINK_EVENTING_API_H_INCLUDED
#define ZLINK_EVENTING_API_H_INCLUDED

#include <zlink/common.h>
#include <zlink/socket/api.h>

#ifdef __cplusplus
extern "C" {
#endif

/** Identifies the transport lane associated with a monitor event. */
typedef enum zlink_monitor_transport_lane_e
{
    ZLINK_MONITOR_TRANSPORT_LANE_APPLICATION = 0,
    ZLINK_MONITOR_TRANSPORT_LANE_COMPLETION = 1
} zlink_monitor_transport_lane_t;

/** Set when a CONNECTION_READY event changes a connection from not-ready to ready. */
#define ZLINK_MONITOR_EVENT_FLAG_CONNECTION_READY_EDGE (1u << 0)

/**
 * Set on ZLINK_EVENT_SEND_FLOW_RESUMED when clearing the remote pause left the
 * pipe actually writable. Clear when another cause - byte HWM, transport wait
 * or termination - still blocks it. `value` carries the flow epoch.
 */
#define ZLINK_MONITOR_EVENT_FLAG_SEND_FLOW_WRITABLE (1u << 1)

/**
 * Set on ZLINK_EVENT_FLOW_STATE_STALE when the epoch did not advance inside the
 * current generation. `value` then carries the received epoch; the current
 * epoch is the one reported by the preceding SEND_FLOW_PAUSED or
 * SEND_FLOW_RESUMED event for the same pair.
 */
#define ZLINK_MONITOR_EVENT_FLAG_FLOW_STATE_STALE_EPOCH (1u << 3)

typedef struct
{
    uint64_t event;
    uint64_t value;
    zlink_routing_id_t routing_id;
    char local_addr[256];
    char remote_addr[256];
    /* Process-local identity of the physical transport attempt. */
    uint64_t connection_id;
    /* One of zlink_monitor_transport_lane_t. */
    uint32_t transport_lane;
    /* Event-specific flags, including ZLINK_MONITOR_EVENT_FLAG_*. */
    uint32_t flags;
} zlink_monitor_event_t;

typedef zlink_monitor_event_t zlink_socket_monitor_event_t;

#define ZLINK_MONITOR_STATUS_ABI_VERSION 4u

typedef struct zlink_socket_monitor_open_options_t
{
    zlink_socket_monitor_event_mask_t events;
    /* 0 selects the Core default; positive values are exact byte HWM values. */
    uint64_t monitor_hwm_bytes;
} zlink_socket_monitor_open_options_t;

typedef struct zlink_monitor_status_t
{
    /* Snapshot ABI version. Equals ZLINK_MONITOR_STATUS_ABI_VERSION. */
    uint32_t abi_version;

    /* Size of this snapshot structure in bytes. */
    uint32_t struct_size;

    /* Snapshot source kind: raw socket. */
    zlink_monitor_source_kind_t source_kind;

    /* Current state bits such as READY, BOUND_READY, and CLOSED. */
    zlink_monitor_state_mask_t state_flags;

    /* Bitmask describing which detail fields are populated. */
    zlink_monitor_status_detail_mask_t detail_flags;

    /* Current pending send message count. */
    uint64_t snd_pending_msgs;

    /* Current pending receive message count. Some sources report an estimate. */
    uint64_t rcv_pending_msgs;

    /* Current pending send bytes. */
    uint64_t snd_pending_bytes;

    /* Current pending receive bytes. Some sources report an estimate. */
    uint64_t rcv_pending_bytes;

    /* Non-zero when automatic HWM policy is enabled for this source. */
    uint32_t auto_hwm_enabled;

    /* Current automatic HWM profile value. Matches zlink_auto_hwm_profile_t. */
    uint32_t auto_hwm_profile;

    /* Socket role used by the automatic HWM calculation. Diagnostic only. */
    uint32_t auto_hwm_role;

    /* Automatic HWM policy class selected from role and socket type. */
    uint32_t auto_hwm_policy_class;

    /* Send HWM selected by the current plan, in accounted bytes. */
    uint64_t auto_hwm_planned_sndhwm_bytes;

    /* Receive HWM selected by the current plan, in accounted bytes. */
    uint64_t auto_hwm_planned_rcvhwm_bytes;

    /* Current send HWM applied to the socket, in accounted bytes. */
    uint64_t auto_hwm_applied_sndhwm_bytes;

    /* Current receive HWM applied to the socket, in accounted bytes. */
    uint64_t auto_hwm_applied_rcvhwm_bytes;

    /* Current send buffer size applied to the socket, in bytes. */
    int32_t auto_hwm_effective_sndbuf;

    /* Current receive buffer size applied to the socket, in bytes. */
    int32_t auto_hwm_effective_rcvbuf;

    /* Last automatic HWM recalculation timestamp, in milliseconds. */
    uint64_t auto_hwm_last_recalc_ms;

    /* Last automatic HWM recalculation reason. ZLINK_AUTO_HWM_RECALC_REASON_*. */
    uint32_t auto_hwm_last_recalc_reason;

    /* Ratio of send attempts blocked by backpressure, in ppm. */
    uint32_t auto_hwm_send_blocked_ratio_ppm;

    /* Target send HWM while shrink is deferred, in accounted bytes. */
    uint64_t auto_hwm_deferred_sndhwm_bytes;

    /* Target receive HWM while shrink is deferred, in accounted bytes. */
    uint64_t auto_hwm_deferred_rcvhwm_bytes;

    /* Non-zero when auto_hwm_deferred_sndhwm_bytes is valid. */
    uint32_t auto_hwm_deferred_sndhwm_valid;

    /* Non-zero when auto_hwm_deferred_rcvhwm_bytes is valid. */
    uint32_t auto_hwm_deferred_rcvhwm_valid;

    /* Current bytes retained by outbound pipe directions. */
    uint64_t snd_bytes_in_flight;

    /* Current bytes retained by inbound pipe directions. */
    uint64_t rcv_bytes_in_flight;

    /* Minimum accounted charge for one Core frame. */
    uint64_t minimum_core_message_charge_bytes;

    /* Number of messages admitted by the empty-pipe oversize rule. */
    uint64_t oversize_message_admission_count;

    /* Largest accounted message admitted by the empty-pipe oversize rule. */
    uint64_t oversize_message_admission_max_bytes;

    /* Paired DEALER/ROUTER completion-lane receive-flow observation
     * (core-byte-hwm-flow-control-plan.ko.md §6). Present since ABI 4. */

    /* Current count of application pipes this socket sees as remote-PAUSED. */
    uint64_t flow_paused_connections;

    /* Total PAUSED transitions actually applied (never a stale/duplicate). */
    uint64_t flow_pause_applied_total;

    /* Total RUNNING transitions actually applied (never a stale/duplicate). */
    uint64_t flow_resume_applied_total;

    /* Total stale or duplicate flow-state frames ignored. */
    uint64_t flow_state_stale_total;

    /* Duration of the most recently completed PAUSED interval, in
     * milliseconds. 0 if no PAUSED interval has completed yet. */
    uint64_t flow_pause_duration_ms;
} zlink_monitor_status_t;

/**
 * @brief Open and return a socket monitor handle directly.
 * @param events_  Event bitmask.
 * @return Monitor handle, or NULL on failure.
 */
ZLINK_EXPORT void *zlink_socket_monitor_open (void *s_,
                                              const zlink_socket_monitor_open_options_t *options_);

ZLINK_EXPORT zlink_recv_result_t zlink_socket_monitor_recv (void *monitor_,
                                                            zlink_socket_monitor_event_t *out_,
                                                            zlink_recv_flags_t flags_);

/** @brief Read the current snapshot for a monitor handle. */
ZLINK_EXPORT zlink_config_result_t zlink_monitor_status (void *monitor_,
                                                         zlink_monitor_status_t *out_);

ZLINK_EXPORT zlink_close_result_t zlink_monitor_close (void **monitor_p_);


#if defined _WIN32
#if defined _WIN64
typedef unsigned __int64 zlink_fd_t;
#else
typedef unsigned int zlink_fd_t;
#endif
#else
typedef int zlink_fd_t;
#endif

typedef struct zlink_pollitem_t
{
    void *socket;
    zlink_fd_t fd;
    short events;
    short revents;
} zlink_pollitem_t;

typedef struct zlink_poller_event_t
{
    zlink_poller_source_kind_t source_kind;
    void *socket;
    zlink_fd_t fd;
    void *timer;
    void *user_data;
    short events;
} zlink_poller_event_t;

#ifndef ZLINK_HAVE_POLLER
#define ZLINK_HAVE_POLLER 1
#endif

ZLINK_EXPORT int zlink_poll (zlink_pollitem_t *items_,
                             int nitems_,
                             long timeout_,
                             zlink_config_result_t *error_out_);

ZLINK_EXPORT void *zlink_poller_new (void);
ZLINK_EXPORT zlink_close_result_t zlink_poller_destroy (void **poller_p_);
ZLINK_EXPORT int zlink_poller_size (void *poller_, zlink_config_result_t *error_out_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_add (void *poller_,
                                                     void *socket_,
                                                     void *user_data_,
                                                     short events_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_modify (void *poller_,
                                                        void *socket_,
                                                        short events_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_remove (void *poller_, void *socket_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_add_fd (void *poller_,
                                                        zlink_fd_t fd_,
                                                        void *user_data_,
                                                        short events_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_add_timer (void *poller_,
                                                           void *timer_,
                                                           void *user_data_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_modify_fd (void *poller_,
                                                           zlink_fd_t fd_,
                                                           short events_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_remove_fd (void *poller_, zlink_fd_t fd_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_remove_timer (void *poller_, void *timer_);
ZLINK_EXPORT int zlink_poller_wait (void *poller_,
                                    zlink_poller_event_t *events_,
                                    int n_events_,
                                    long timeout_,
                                    zlink_config_result_t *error_out_);
/******************************************************************************/
/*  Timers                                                                    */
/******************************************************************************/

ZLINK_EXPORT void *zlink_timer_new (void);
ZLINK_EXPORT zlink_close_result_t zlink_timer_destroy (void **timer_p_);
ZLINK_EXPORT zlink_config_result_t zlink_timer_start (void *timer_,
                                                      uint64_t interval_ns_,
                                                      uint64_t repeat_count_);
ZLINK_EXPORT zlink_config_result_t zlink_timer_stop (void *timer_);
ZLINK_EXPORT zlink_recv_result_t zlink_timer_recv (void *timer_, uint64_t *fire_count_out_);
#ifdef __cplusplus
}
#endif

#endif